--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,6 +1,6 @@
 body,li,a,ul{
     text-align:center;
-    font-family:"Garamond" serif;
+    font-family:"Garamond", serif;
     font-size:24px;
     background-color:#AFE1AF;
     color: #087969;
